fix(angular:form): align input placeholder color to core
closes #6439

--- a/projects/angular/src/forms/styles/_variables.forms.scss
+++ b/projects/angular/src/forms/styles/_variables.forms.scss
@@ -14,7 +14,7 @@ $clr-forms-invalid-color: $clr-color-danger-800 !default;
 $clr-forms-valid-color: $clr-color-success-700 !default;
 $clr-forms-valid-text-color: $clr-color-success-900 !default;
 $clr-forms-subtext-color: $clr-color-neutral-600 !default;
-$clr-forms-placeholder-color: $clr-color-neutral-600 !default;
+$clr-forms-placeholder-color: $clr-global-color-construction-600 !default;
 $clr-forms-border-color: $clr-color-neutral-500 !default;
 $clr-forms-focused-color: $clr-color-action-600 !default;
 $clr-forms-subtext-disabled-color: $clr-color-neutral-600 !default;
